--- a/views/pizza.ejs
+++ b/views/pizza.ejs
@@ -1,35 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('parts/head',{title:'Pizzaria Fantástica'}); %>
+<link rel="stylesheet" href="/css/pizza.css">
+	<main>
+		<h1><%= pizza.nome %></h1>
+		<h2><%= pizza.preco.toLocaleString('pt-br', { minimumFractionDigits: 2 , style: 'currency', currency: 'BRL' }) %></h2>
+		<img src="<%= pizza.img %>" alt="<%= pizza.nome %>">
+		<div>Ingredientes: <%= pizza.ingredientes.join(", ") %></div>
+		<button>+ Add</button>
+		
+		<% if(idPrev){ %>
+		<a href="/pizzas/<%= idPrev %>" class="prev">&lt;</a>
+		<% } %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/pizza.css">
-    <title>Pizza</title>
-</head>
-
-<body>
-    <%- include('parts/head.ejs') %>
-        <h1>
-            <%= pizza.nome%>
-        </h1>
-        <h2>
-            <%= pizza.preco.toLocaleString('pt-br', { minimumFractionDigits: 2 , style: 'currency', currency: 'BRL' }) %>
-        </h2>
-
-        <main>
-            <img src="/<%=pizza.img%>" alt="<%=pizza.nome%>">
-        </main>
-
-        <article>
-            <%for (let ingrediente of pizza.ingredientes) {%>
-                <li>
-                    <%=ingrediente%>
-                </li>
-                <%}%>
-
-                    <%- include('parts/foot.ejs') %>
-        </article>
-</body>
-
-</html>
+		<% if(idNext){ %>
+		<a href="/pizzas/<%= idNext %>" class="next">&gt;</a>
+		<% } %>
+	</main>
+	<%- include('parts/foot'); %>
